--- a/MtgHelper/mainwindow.ui
+++ b/MtgHelper/mainwindow.ui
@@ -76,7 +76,7 @@
           </layout>
          </item>
          <item>
-          <widget class="QListView" name="resultList"/>
+          <widget class="QListWidget" name="resultList"/>
          </item>
         </layout>
        </widget>
@@ -106,8 +106,8 @@
            <rect>
             <x>40</x>
             <y>40</y>
-            <width>58</width>
-            <height>15</height>
+            <width>201</width>
+            <height>16</height>
            </rect>
           </property>
           <property name="text">
