--- a/MtgHelper/mainwindow.ui
+++ b/MtgHelper/mainwindow.ui
@@ -6,156 +6,76 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1031</width>
-    <height>717</height>
+    <width>1039</width>
+    <height>729</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QWidget" name="layoutWidget">
-    <property name="geometry">
-     <rect>
-      <x>10</x>
-      <y>0</y>
-      <width>1012</width>
-      <height>674</height>
-     </rect>
-    </property>
-    <layout class="QHBoxLayout" name="layoutMain">
-     <item>
-      <widget class="QGroupBox" name="boxSearch">
-       <property name="minimumSize">
-        <size>
-         <width>391</width>
-         <height>671</height>
-        </size>
+   <layout class="QHBoxLayout" name="horizontalLayout_10" stretch="3,5">
+    <item>
+     <widget class="QGroupBox" name="boxSearch">
+      <property name="title">
+       <string>Search list</string>
+      </property>
+      <widget class="QWidget" name="layoutWidget_2">
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>30</y>
+         <width>371</width>
+         <height>631</height>
+        </rect>
        </property>
-       <property name="maximumSize">
-        <size>
-         <width>391</width>
-         <height>671</height>
-        </size>
-       </property>
-       <property name="title">
-        <string>Search results</string>
-       </property>
-       <widget class="QWidget" name="layoutWidget_2">
-        <property name="geometry">
-         <rect>
-          <x>10</x>
-          <y>30</y>
-          <width>371</width>
-          <height>631</height>
-         </rect>
+       <layout class="QVBoxLayout" name="verticalLayout_3">
+        <property name="sizeConstraint">
+         <enum>QLayout::SetNoConstraint</enum>
         </property>
-        <layout class="QVBoxLayout" name="verticalLayout_3">
-         <property name="sizeConstraint">
-          <enum>QLayout::SetNoConstraint</enum>
-         </property>
-         <item>
-          <layout class="QHBoxLayout" name="horizontalLayout_2">
-           <item>
-            <widget class="QLineEdit" name="searchLine"/>
-           </item>
-           <item>
-            <widget class="QToolButton" name="buttonSearch">
-             <property name="text">
-              <string>Search</string>
-             </property>
-            </widget>
-           </item>
-           <item>
-            <widget class="QPushButton" name="buttonAdvanced">
-             <property name="text">
-              <string>Advanced</string>
-             </property>
-            </widget>
-           </item>
-          </layout>
-         </item>
-         <item>
-          <widget class="QListWidget" name="resultList"/>
-         </item>
-        </layout>
-       </widget>
+        <item>
+         <layout class="QHBoxLayout" name="horizontalLayout_2">
+          <item>
+           <widget class="QLineEdit" name="searchLine"/>
+          </item>
+          <item>
+           <widget class="QToolButton" name="buttonSearch">
+            <property name="text">
+             <string>Search</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QPushButton" name="buttonAdvanced">
+            <property name="text">
+             <string>Advanced</string>
+            </property>
+           </widget>
+          </item>
+         </layout>
+        </item>
+        <item>
+         <widget class="QListWidget" name="resultList"/>
+        </item>
+       </layout>
       </widget>
-     </item>
-     <item>
-      <layout class="QVBoxLayout" name="verticalLayout">
-       <item>
-        <widget class="QGroupBox" name="boxCardInfo">
-         <property name="minimumSize">
-          <size>
-           <width>611</width>
-           <height>511</height>
-          </size>
-         </property>
-         <property name="maximumSize">
-          <size>
-           <width>611</width>
-           <height>511</height>
-          </size>
-         </property>
-         <property name="title">
-          <string>Card info</string>
-         </property>
-         <widget class="QLabel" name="testLabel">
-          <property name="geometry">
-           <rect>
-            <x>40</x>
-            <y>40</y>
-            <width>201</width>
-            <height>16</height>
-           </rect>
-          </property>
-          <property name="text">
-           <string>TextLabel</string>
-          </property>
-         </widget>
-        </widget>
-       </item>
-       <item>
-        <widget class="QGroupBox" name="boxLogs">
-         <property name="minimumSize">
-          <size>
-           <width>611</width>
-           <height>153</height>
-          </size>
-         </property>
-         <property name="maximumSize">
-          <size>
-           <width>611</width>
-           <height>153</height>
-          </size>
-         </property>
-         <property name="title">
-          <string>Logs</string>
-         </property>
-         <widget class="QTextEdit" name="logsView">
-          <property name="geometry">
-           <rect>
-            <x>10</x>
-            <y>30</y>
-            <width>591</width>
-            <height>111</height>
-           </rect>
-          </property>
-         </widget>
-        </widget>
-       </item>
-      </layout>
-     </item>
-    </layout>
-   </widget>
+     </widget>
+    </item>
+    <item>
+     <widget class="QGroupBox" name="boxCardInfo">
+      <property name="title">
+       <string>Card info</string>
+      </property>
+     </widget>
+    </item>
+   </layout>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1031</width>
+     <width>1039</width>
      <height>20</height>
     </rect>
    </property>
