fetching and prasing image

--- a/MtgHelper/mainwindow.ui
+++ b/MtgHelper/mainwindow.ui
@@ -14,7 +14,7 @@
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <layout class="QHBoxLayout" name="horizontalLayout_10" stretch="3,5">
+   <layout class="QHBoxLayout" name="horizontalLayout" stretch="3,5">
     <item>
      <widget class="QGroupBox" name="boxSearch">
       <property name="title">
@@ -66,6 +66,25 @@
       <property name="title">
        <string>Card info</string>
       </property>
+      <layout class="QVBoxLayout" name="verticalLayout">
+       <item>
+        <widget class="QScrollArea" name="scrollArea">
+         <property name="widgetResizable">
+          <bool>true</bool>
+         </property>
+         <widget class="QWidget" name="scrollAreaWidgetContents">
+          <property name="geometry">
+           <rect>
+            <x>0</x>
+            <y>0</y>
+            <width>608</width>
+            <height>626</height>
+           </rect>
+          </property>
+         </widget>
+        </widget>
+       </item>
+      </layout>
      </widget>
     </item>
    </layout>
